--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .env
 .ipynb_checkpoints
+
+# Python artifacts
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Notebooks
+.ipynb_checkpoints/
+
+# Xcode / Swift
+DerivedData/
+xcuserdata/
+
+# macOS
 .DS_Store
